<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.Onboarding3Fragment"
    android:background="@color/onboarding_second">

    <ImageView
        android:id="@+id/logoAnxiety"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@drawable/puzzle"
        app:layout_constraintBottom_toTopOf="@+id/textViewAnxiety"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewAnxiety"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/archivo"
        android:text="@string/third_onboarding_title"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/descriptionAnxiety"
        app:layout_constraintTop_toBottomOf="@id/logoAnxiety" />

    <TextView
        android:id="@+id/descriptionAnxiety"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:alpha="0.5"
        android:fontFamily="@font/archivo"
        android:text="@string/third_onboarding_description"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/textViewAnxiety" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:indeterminate="false"
        android:max="100"
        android:progress="33"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descriptionAnxiety" />

    <Button
        android:padding="20dp"
        android:id="@+id/buttonGetStarted"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/custom_button"
        android:fontFamily="@font/archivo"
        android:text="@string/get_started"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/progressBar"
        tools:layout_editor_absoluteX="32dp" />

</androidx.constraintlayout.widget.ConstraintLayout>