<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.Onboarding2Fragment"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/onboarding_two">

        <ImageView
            android:contentDescription="@null"
            android:id="@+id/logoAnxiety"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:adjustViewBounds="true"
            android:src="@drawable/cheerful"
            app:layout_constraintBottom_toTopOf="@+id/textViewAnxiety"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewAnxiety"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/archivo"
            android:text="@string/second_onboarding_title"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/descriptionAnxiety"
            app:layout_constraintTop_toBottomOf="@id/logoAnxiety" />

        <TextView
            android:id="@+id/descriptionAnxiety"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:alpha="0.5"
            android:fontFamily="@font/archivo"
            android:text="@string/second_onboarding_description"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/textViewAnxiety" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:indeterminate="false"
            android:max="100"
            android:progress="33"
            app:layout_constraintBottom_toBottomOf="@+id/next"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/next" />

        <TextView
            android:id="@+id/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="32dp"
            android:layout_marginBottom="32dp"
            android:fontFamily="@font/archivo"
            android:text="@string/next"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/descriptionAnxiety" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:contentDescription="@null"
            android:src="@drawable/baseline_arrow_right_alt_24"
            app:layout_constraintBottom_toBottomOf="@+id/next"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/next" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>